--- a/kidz tution tracker/Base.lproj/Tuitions.storyboard
+++ b/kidz tution tracker/Base.lproj/Tuitions.storyboard
@@ -381,7 +381,7 @@
                                 <action selector="cancelAction:" destination="dlK-Xq-1p4" id="54t-5s-DMv"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="8k4-J1-UHu">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="8k4-J1-UHu">
                             <color key="tintColor" red="0.076245285570000002" green="0.77416694159999999" blue="0.95813018080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="saveAction:" destination="dlK-Xq-1p4" id="L5k-of-9o6"/>
@@ -613,8 +613,9 @@
                                                     <rect key="frame" x="8" y="8" width="551" height="59"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Every Week On" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FdI-Qq-asF">
-                                                            <rect key="frame" x="0.0" y="20" width="120" height="19"/>
+                                                            <rect key="frame" x="0.0" y="5" width="120" height="50"/>
                                                             <constraints>
+                                                                <constraint firstAttribute="height" constant="50" id="NAc-oj-fRS"/>
                                                                 <constraint firstAttribute="width" constant="120" id="RXV-t5-m2m"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="16"/>
@@ -783,13 +784,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Edit Tuition" id="Y5W-TK-Qhr">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="nxe-Ah-Xhp">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="nxe-Ah-Xhp">
                             <color key="tintColor" red="0.076245285570000002" green="0.77416694159999999" blue="0.95813018080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="cancelAction:" destination="oSw-Mh-8ba" id="di8-Ny-pB4"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="S52-t4-CNa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="S52-t4-CNa">
                             <color key="tintColor" red="0.076245285570000002" green="0.77416694159999999" blue="0.95813018080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="saveAction:" destination="oSw-Mh-8ba" id="fO5-u1-Jy0"/>
@@ -809,7 +810,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GSA-PP-wvq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2808" y="1489"/>
+            <point key="canvasLocation" x="2366" y="1457"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GbN-gd-Rn2">
@@ -832,13 +833,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ooP-Bp-xj3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1996" y="1489"/>
+            <point key="canvasLocation" x="1642" y="1462"/>
         </scene>
     </scenes>
     <resources>
         <image name="tuitionsIcon" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="szR-zW-ZEl"/>
+        <segue reference="NtJ-HD-LZd"/>
     </inferredMetricsTieBreakers>
 </document>
